[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/EventSpawner.gd" type="Script" id=1]

[node name="EventSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="EventSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="EventKillTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="EventSpawnTimer" to="." method="_on_EventSpawnTimer_timeout"]
[connection signal="timeout" from="EventKillTimer" to="." method="_on_EventKillTimer_timeout"]
